update some stuff

--- a/cmechabbrev.tex
+++ b/cmechabbrev.tex
@@ -22,11 +22,11 @@
 
 % Processes and sequences
 
-\newcommand{\Process}{\mathcal{P}}
+\newcommand{\Process}{\mathcal{P}\xspace}
 
 \newcommand{\ProbMach}{\Prob_{\mathrm{M}}}
 \newcommand{\Lmax}   { {L_{\mathrm{max}}}}
-\newcommand{\MeasAlphabet}      {\mathcal{A}}
+\newcommand{\MeasAlphabet}      {\mathcal{A}\xspace}
 % Original symbol
 %\newcommand{\MeasSymbol}   { {S} }
 %\newcommand{\meassymbol}   { {s} }
@@ -479,3 +479,5 @@
 \renewcommand{\Process} {\ensuremath{\mathcal{P}}\xspace}
 
 \renewcommand{\eT} {$\acute{\epsilon}$tomata\xspace}
+
+\renewcommand{\MeasAlphabet}      {\mathcal{\Sigma}\xspace}
