--- a/cmechabbrev.tex
+++ b/cmechabbrev.tex
@@ -403,6 +403,7 @@
 
 \newcommand{\metric}[1] {\ensuremath{#1_\mu}\xspace}
 
+\renewcommand{\hmu}{\metric{h}}
 \newcommand{\rhomu}{\metric{\rho}}
 \newcommand{\rmu}{\metric{r}}
 \newcommand{\bmu}{\metric{b}}
@@ -480,4 +481,4 @@
 
 \renewcommand{\eT} {$\acute{\epsilon}$tomata\xspace}
 
-\renewcommand{\MeasAlphabet}      {\mathcal{\Sigma}\xspace}
+\renewcommand{\MeasAlphabet} {\ensuremath{\Sigma}\xspace}
